# pushback-ai

./: ADVISE.md  CLEANUP.md  Makefile  README.md  pyproject.toml
demo/: compare_models.py
docs/: quickstart_disagreement.md  tilburg_cleanup_plan.md
src/friction_reasoning/dataset/: README.md  disagreement_dataset.jsonl
src/friction_reasoning/model_training/: README.md  test_model.py
tests/: test_dataset.py  test_model_training.py
